--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #springboot_config
-server.port=8889
+server.port=8080
 
 # jdbc_config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hackday?characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 # jpa
 spring.jpa.show-sql=true
